  this option (requires libgd and freetype)
- Add compaction method (e.g. average, sum) as an attribute of 
  variables -- settable under Variable/Edit attributes
- Add "outfile" command to send output of selected commands to
  a specified file
- In importing data from a database, recognize if a variable
  of the same name is already in the working dataset
- Start adding Principal Components Analysis
- Fix "pmax" bug in printing of actual, fitted and residuals
- When using "<-" save mechanism for models, preserve the model
  info so it's accessible for genr, etc.
- Fix bug in numbering of auto-generated lagged variables
- Fix bug in parsing of gnuplot { ... } special command list
- Fix bug in model table (wrong coefficient numbering)
- Fix bug: when a file is dragged onto gretl, opening the
  file failed if it has a space in its name
- configure: require correct version of GMP (>= 4.0.1)
- Fix bug: gretlcli.exe on win32 didn't find user directory
- Workaround: command-line invocation of gretlw32.exe with 
  datafile could crash (I think this was a Windows bug)
- Fixes for forecast-with-errors graphs
- Fixes for "influential observations" test calculations, in
  extreme cases
- Windows version: update to gtk 2.2.3 runtime

07/23/03 version 1.1.0
- Extend DATAINFO structure -- allow specification of "display
  names" for variables (these are shown in graphs)
- Provide "label" command for setting the description and/or
  display name for a variable
- Add script commands for saving and displaying models and
  graphs 
- Fix effect of sample range on the "genr" command
- Improvements to the gretl console (command history, etc.)
- Add the Johansen cointegration test to the gui menus
- Add option to use QR decomposition instead of Cholesky for
  calculating regression results
- Fix bug: periodogram command failed in batch mode
- Make uniform() PRNG generate in the standard range 0-1
  (rather than 1-100, as it was previously)
- Small modifications to path-searching