@@ -1,0 +1,37 @@
+/* XPM */
+static char *gnuplot_toolbar_xpm[] = {
+/* columns rows colors chars-per-pixel */
+"24 24 7 1",
+"  c #000000",
+". c #0000ff",
+"X c #00ff00",
+"o c #ff0000",
+"O c #c0c0c0",
+"+ c #ffffff",
+"@ c None",
+/* pixels */
+" +++++ ++++++O+++++++OX ",
+" +++++ ++++++O+++++++X+ ",
+" OOOOO OOOOOOOOOOOOOOXO ",
+" +++++ ++++++O++++++XO+ ",
+" +++++ ++++++O+++++X+O+ ",
+" o++++ ++++++O+++++X+O+ ",
+" +o+++ ++++++X++++X++O+ ",
+" +o+++ +++++XOX++X+++O+ ",
+" ++o++ +++++XO+X+X+++O+ ",
+" +++o+ ++++X+O++X++.+O+ ",
+" +++o+ +++X++O++++.+.O+ ",
+" OOOOo OOOXOOOOOO.OO.OO ",
+" +++++ o+X+++O++.++++.+ ",
+" X++++ +X++++O+.+++++O. ",
+" +X+++ +X++++O.++++++O+ ",
+" +X+++ X+o+++.+++++++Oo ",
+" ++X+X +++o+.O+++++++oo ",
+" +++X+ ++++o+O+++++++o+ ",
+" +++++ +++.o+O++++++oO+ ",
+" +++++ ++.++oO+++++o+O+ ",
+"                        ",
+" +++++ +.++++o++++o++O+ ",
+" +++++ +.++++Ooo+o+++O+ ",
+" +++++ .+++++O++o++++O+ "
+};
